@@ -1,15 +1,18 @@
 # -*- mode: autoconf; autoconf-indentation: 4; -*-
 #
-# RProtoBuf configure.in by Dirk Eddelbuettel <edd@debian.org>
+# RProtoBuf configure.ac
 #
-# $Id$
+# Copyright (C) 2009 - 2017  Dirk Eddelbuettel <edd@debian.org>
+# Copyright (C) 2010 - 2017  Dirk Eddelbuettel and Romain Francois
+# Copyright (C) 2013 - 2017  Dirk Eddelbuettel, Romain Francois and Murray Stokely
+# Copyright (C) 2016 - 2017  Dirk Eddelbuettel, Romain Francois, Murray Stokely and Craig Radcliffe
 
 # require at least autoconf 2.61
 AC_PREREQ(2.61)
 
 # Process this file with autoconf to produce a configure script.
-AC_INIT([RProtoBuf],[0.4.1])
-m4_include([m4/m4-ax_cxx_compile_stdcxx_0x.m4])
+AC_INIT([RProtoBuf],[0.4.8])
+#m4_include([m4/m4-ax_cxx_compile_stdcxx_0x.m4])
 
 # We are using C++
 AC_LANG(C++)
@@ -20,7 +23,7 @@ AC_PROG_CXX
 # If we can support std=c++0x we should pass flags to do so (this will
 # enable better int64 support) but we shouldn't cause the build to
 # fail if we can't do this.
-AC_CXX_COMPILE_STDCXX_0X
+#AC_CXX_COMPILE_STDCXX_0X
 
 ## simpler alternative to test below:  AC_PATH_PROG(PROTOC, protoc)
 
@@ -140,24 +143,31 @@ if test "x$ax_cv_cxx_compile_cxx0x_cxx" = "xyes" ; then
 fi
 
 ## look for Rscript, but use the one found via R_HOME to allow for multiple installations
-AC_DEFUN([AC_PROG_RSCRIPT], [AC_CHECK_PROG(RSCRIPT,Rscript,yes)])
-AC_PROG_RSCRIPT
-if test x"${RSCRIPT}" == x"yes" ; then
-    ## link flag providing libary as well as path to library, and optionally rpath
-    rcpp_ldflags=`${R_HOME}/bin/Rscript -e 'Rcpp:::LdFlags()'`
-else
-    echo "
-  Your installation does not appear to have Rscript installed.
-
-  Please make sure that you have a working and complete R installation.
-"
-    exit 1
-fi
+#AC_DEFUN([AC_PROG_RSCRIPT], [AC_CHECK_PROG(RSCRIPT,Rscript,yes)])
+#AC_PROG_RSCRIPT
+#if test x"${RSCRIPT}" == x"yes" ; then
+#    ## link flag providing libary as well as path to library, and optionally rpath
+#    rcpp_ldflags=`${R_HOME}/bin/Rscript -e 'Rcpp:::LdFlags()'`
+#else
+#    echo "
+#  Your installation does not appear to have Rscript installed.
+#
+#  Please make sure that you have a working and complete R installation.
+#"
+#    exit 1
+#fi
 
 ## now use all these
 AC_SUBST([PKG_CPPFLAGS],["${PKG_CPPFLAGS} ${CXXFLAGS} $protobuf_cxxflags"])
 AC_SUBST([PKG_LIBS],["${PKG_LIBS} $rcpp_ldflags $protobuf_libs"])
-AC_SUBST([R_HOME],["${R_HOME}"])
+#AC_SUBST([R_HOME],["${R_HOME}"])
 AC_CONFIG_FILES([src/Makevars])
 AC_OUTPUT
 echo "Completed configuration and ready to build."
+echo "  PKG_CPPFLAGS:      ${PKG_CPPFLAGS}"
+#echo "  CXXFLAGS:          ${CXXFLAGS}"
+#echo "  protobuf_cxxflags: ${protobuf_cxxflags}"
+echo "  PKG_LIBS:          ${PKG_LIBS}"
+#echo "  rcpp_ldflags:      ${rcpp_ldflags}"
+#echo "  protobuf_libs:     ${protobuf_libs}"
+#echo "  R_HOME:            ${R_HOME}"
